; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_http.c_http_task_get_transfer_list.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_http.c_http_task_get_transfer_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32, i32 }

@task_http_transfer_handler = common dso_local global i32 0, align 4
@task_http_retriever = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @http_task_get_transfer_list() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = load i32, i32* @task_http_transfer_handler, align 4
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32 %2, i32* %3, align 4
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 4, i32* %4, align 8
  %5 = load i32, i32* @task_http_retriever, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 %5, i32* %6, align 8
  %7 = call i32 @task_queue_retrieve(%struct.TYPE_3__* %1)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  ret i32* %9
}

declare dso_local i32 @task_queue_retrieve(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
